// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components => molecules => Card > should render the Card with some props passed 1`] = `
<DocumentFragment>
  <div
    class="sc-eLqIir sc-buuUZy kfzyXq dcAPxy"
  >
    <div
      class="sc-dujCx jdGAeT"
    >
      <img
        alt="I am a title"
        class="sc-bFmjqi YAYvZ"
        src="http://image"
        width="140"
      />
      <h3
        class="sc-iGsdBT gcjGsg"
      >
        I am a title
      </h3>
      <p
        class="sc-ckeRpf flOcDv"
      >
        <span
          class="sc-kRYBTm jkbQkO"
          status="Alive"
        />
        Alive - Human
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components => molecules => Card > should render the Card with some props passed as dead character 1`] = `
<DocumentFragment>
  <div
    class="sc-eLqIir sc-buuUZy kfzyXq dcAPxy"
  >
    <div
      class="sc-dujCx jdGAeT"
    >
      <img
        alt="I am a title"
        class="sc-bFmjqi YAYvZ"
        src="http://image"
        width="140"
      />
      <h3
        class="sc-iGsdBT gcjGsg"
      >
        I am a title
      </h3>
      <p
        class="sc-ckeRpf flOcDv"
      >
        <span
          class="sc-kRYBTm jyKKPJ"
          status="Dead"
        />
        Dead - Human
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components => molecules => Card > should render the Card with the default when no props are passed 1`] = `
<DocumentFragment>
  <div
    class="sc-eLqIir sc-buuUZy kfzyXq dcAPxy"
  >
    <div
      class="sc-dujCx jdGAeT"
    >
      <img
        alt="No Character"
        class="sc-bFmjqi YAYvZ"
        src="../../../assets/rick-morty.svg"
        width="140"
      />
      <h3
        class="sc-iGsdBT gcjGsg"
      >
        No Character
      </h3>
      <p
        class="sc-ckeRpf flOcDv"
      >
        <span
          class="sc-kRYBTm ewBspn"
        />
         - 
      </p>
    </div>
  </div>
</DocumentFragment>
`;
